--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
         <div class="header">
             <nav><h3>Navbar</h3></nav>
         </div>
-        <div class="body"></div>
-        <div class="footer"></div>
+        <div class="body">
+            <body>
+                <h3>This is body</h3>
+            </body>
+        </div>
+        <div class="footer">
+            <h3>Footer</h3>
+        </div>
     </div>
 </body>
 </html>
