i chang somethng development

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div class="footer">
             <h3>Footer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius reprehenderit, minima delectus ea tenetur porro harum impedit, minus tempora vel excepturi iure numquam magni reiciendis voluptatum ipsam commodi illo? Praesentium!</p>
         </div>
     </div>
 </body>
