created login form dev_2 login form

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 <body>
     <h1>Main Branch</h1>
     <h3>Git status check</h3>
+    <form>
+        <input type="text" placeholder="pleaseinput">
+        <input type="text" placeholder="name">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
